--- a/school_ms/views/school_classes_view.xml
+++ b/school_ms/views/school_classes_view.xml
@@ -6,7 +6,7 @@
         <field name="name">School.Classes.Form</field>
         <field name="model">school.classes</field>
         <field name="arch" type="xml">
-            <form>
+            <form create="false">
                 <headr>
                      <button name="open_change_class_state_wizard"
                             string="Change State"
@@ -53,7 +53,7 @@
                     decoration-warning="state == 'draft'"
                     decoration-success="state == 'active'"
                     decoration-primary="state == 'complete'"
-                    decoration-danger="state == 'cancel'">
+                    decoration-danger="state == 'cancel'"  create="false">
                 <field name="class_id"/>
                 <field name="educational_stage"/>
                 <field name="total_number"/>
@@ -114,6 +114,7 @@
         <field name="res_model">school.classes</field>
         <field name="view_mode">list,form,kanban</field>
         <field name="view_id" ref="school_classes_kanban"/>
+        <field name="context">{'create': False}</field>
     </record>
 
     <menuitem id="school_classes_menuitem"
