--- a/school_ms/views/class_schedule_view.xml
+++ b/school_ms/views/class_schedule_view.xml
@@ -49,7 +49,7 @@
 
     <menuitem id="class_schedule_menuitem"
               name="Class Schedule"
-              parent="school_ms_root"
+              parent="classes_menuitem"
               action="class_schedule_action"
     />
 </odoo>
