--- a/school_ms/views/school_classes_view.xml
+++ b/school_ms/views/school_classes_view.xml
@@ -8,12 +8,19 @@
         <field name="arch" type="xml">
             <form create="false">
                 <headr>
-                     <button name="open_change_class_state_wizard"
+                    <button name="open_change_class_state_wizard"
                             string="Change State"
                             type="object" class="btn-primary"/>
                     <button
                             name="%(action_report_class_schedule)d"
                             string="Download class schedule"
+                            type="action"
+                            class="btn-primary"
+                            icon="fa-file-pdf-o"
+                    />
+                    <button
+                            name="%(action_report_students_class_info)d"
+                            string="Download students info"
                             type="action"
                             class="btn-primary"
                             icon="fa-file-pdf-o"
