--- a/school_ms/views/study_material_view.xml
+++ b/school_ms/views/study_material_view.xml
@@ -25,8 +25,8 @@
                     <group>
                         <field name="name"/>
                         <field name="description"/>
-                        <field name="educational_stage"/>
-                        <field name="grad"/>
+                        <field name="educational_stage" readonly="True"/>
+                        <field name="grad" readonly="True"/>
                         <field name="lessons_number"/>
 x                       <field name="total_mark"/>
                         <field name="passing_mark"/>
@@ -48,15 +48,9 @@ x                       <field name="total_mark"/>
     </record>
 
 
-    <record id="study_material_action" model="ir.actions.act_window">
-        <field name="name">Study Material</field>
-        <field name="res_model">study.materials</field>
-        <field name="view_mode">list,form</field>
-        <field name="view_id" ref="study_materials_list"/>
-        <field name="context">{'create': False}</field>
-    </record>
+
     <menuitem id="study_material_menuitem"
           name="Study Material"
           parent="school_ms_root"
-          action="study_material_action"/>
+          />
 </odoo>
