--- a/school_ms/views/school_students_view.xml
+++ b/school_ms/views/school_students_view.xml
@@ -76,6 +76,17 @@
                                 </list>
                             </field>
                         </page>
+                        <page string="School Installment" >
+                            <field name="school_installment">
+                                <list create="False" edit="False" delete="false">
+                                    <field name="due_date"/>
+                                    <field name="amount"/>
+                                    <field name="currency_id"/>
+                                    <field name="status"/>
+                                    <field name="invoice_id"/>
+                                </list>
+                            </field>
+                        </page>
                     </notebook>
                 </sheet>
                 <chatter/>
