--- a/school_ms/views/class_schedule_view.xml
+++ b/school_ms/views/class_schedule_view.xml
@@ -39,4 +39,31 @@
             </form>
         </field>
     </record>
+
+    <record id="class_schedule_serach" model="ir.ui.view">
+        <field name="name">Class.Schedule.Serach</field>
+        <field name="model">class.schedule</field>
+        <field name="arch" type="xml">
+            <search>
+                <filter name="group_by_class" string="Group by Class " context="{'group_by':'class_id'}"/>
+                <filter name="group_by_teacher" string="Group by Teacher " context="{'group_by':'teacher'}"/>
+            </search>
+        </field>
+    </record>
+
+    <record id="class_schedule_action" model="ir.actions.act_window">
+        <field name="name">Class Schedule Action</field>
+        <field name="res_model">class.schedule</field>
+        <field name="view_mode">list</field>
+        <field name="view_id" ref="class_schedule_list"/>
+        <field name="context">{'create':False,
+            'search_default_group_by_class':1
+            }</field>
+        </record>
+
+        <menuitem id="classes_schedule_menuitem_root"
+              name="Classes schedules"
+              parent="school_classes_menuitem_root"
+              action="class_schedule_action"
+    />
 </odoo>
